fix: resolve compiler warnings and bugs
ArgsParser was ignoring the port argument (copy-paste bug — both
branches set Public Directory). DirectoryAsset was exposing .DS_Store
and other hidden files in directory listings. ParametersParserURL used
the deprecated new URL(String) constructor. RequestParser had an
unchecked cast and a redundant cast.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>